Improve background of form.
Add styling to logo, text and links.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
     <div class="background">
         <div class="logo">
-            <img src="assets/odin-lined.png" alt="odin logo">
+            <img class="icon" src="assets/odin-lined.png" alt="odin logo">
             <h3>ODIN</h3>
         </div>
-        Photo by <a href="https://unsplash.com/@haliewestphoto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Halie West</a> on <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+        <div class="watermark">
+            Photo by <a href="https://unsplash.com/@haliewestphoto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Halie West</a> on <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+        </div>
     </div>
     <div class="form">
 
