Set up html structure for form.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,37 @@
         </div>
     </div>
     <div class="form">
-
+        <h4>
+            This is not a real online service! You know you need something like this in your life to help you realize
+            your deepest dreams. Sign up now to get started.
+        </h4>
+        <h4>
+            You know you want to.
+        </h4>
+        <form action="" method="get">
+            <div class="user_info"></div>
+            <h4>Let's do this</h4>
+            <div class="name">
+                <label for="first_name">First Name</label>
+                <input type="text" name="first_name" id="first_name">
+                <label for="last_name">Last Name</label>
+                <input type="text" name="last_name" id="last_name">
+            </div>
+            <div class="contact">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email">
+                <label for="tel_number">Phone Number</label>
+                <input type="tel" name="tel_number" id="tel_number">
+            </div>
+            <div class="auth">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password">
+                <label for="confimation">Confirm Password</label>
+                <input type="password" name="confimation" id="confimation">
+            </div>
+            <button type="submit">Create Account</button>
+        </form>
+        <h5>Already have an account? <a href="">Log in</a></h5>
     </div>
 </body>
 </html>
