--- a/index.html
+++ b/index.html
@@ -25,27 +25,43 @@
             You know you want to.
         </h4>
         <form action="" method="get">
-            <div class="user_info"></div>
-            <h4>Let's do this</h4>
-            <div class="name">
-                <label for="first_name">First Name</label>
-                <input type="text" name="first_name" id="first_name">
-                <label for="last_name">Last Name</label>
-                <input type="text" name="last_name" id="last_name">
+            <div class="info">
+                <h4>Let's do this</h4>
+                <div class="name">
+                    <div>
+                        <label for="first_name">First Name</label>
+                        <input type="text" name="first_name" id="first_name">
+                    </div>
+                    <div>
+                        <label for="last_name">Last Name</label>
+                        <input type="text" name="last_name" id="last_name">
+                    </div>
+                </div>
+                <div class="contact">
+                    <div>
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email">
+                    </div>
+                    <div>
+                        <label for="tel_number">Phone Number</label>
+                        <input type="tel" name="tel_number" id="tel_number">
+                    </div>
+                </div>
+                <div class="auth">
+                    <div>
+                        <label for="password">Password</label>
+                        <input type="password" name="password" id="password" required>
+                        <span></span>
+                    </div>
+                    <div>
+                        <label for="confimation">Confirm Password</label>
+                        <input type="password" name="confimation" id="confimation" required>
+                    </div>
+                </div>
             </div>
-            <div class="contact">
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email">
-                <label for="tel_number">Phone Number</label>
-                <input type="tel" name="tel_number" id="tel_number">
+            <div>
+                <button type="submit">Create Account</button>
             </div>
-            <div class="auth">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password">
-                <label for="confimation">Confirm Password</label>
-                <input type="password" name="confimation" id="confimation">
-            </div>
-            <button type="submit">Create Account</button>
         </form>
         <h5>Already have an account? <a href="">Log in</a></h5>
     </div>
